force-app/main/default/objects/RTL_Upload_Campaign_Member_Logs__c/RTL_Upload_Campaign_Member_Logs__c.object-meta.xml
<CustomObject>
    <label>Upload Campaign Member Log</label>
    <nameField>
        <displayFormat>UCML-{00000000}</displayFormat>
        <label>Upload Campaign Member Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upload Campaign Member Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>