force-app/main/default/objects/RTL_Upload_Campaign_Member_Logs__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTL Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Upload_Campaign_Member_Log</relationshipName>
    <type>Lookup</type>
</CustomField>