force-app/main/default/objects/RTL_Upload_Campaign_Member_Logs__c/fields/RTL_Number_of_Rows__c.field-meta.xml
<CustomField>
    <fullName>RTL_Number_of_Rows__c</fullName>
    <label>RTL No. of Imported Rows</label>
    <summaryForeignKey>RTL_Upload_Campaign_Members__c.RTL_Upload_Campaign_Member_Logs__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>