force-app/main/default/objects/RTL_Upload_Campaign_Member_Logs__c/fields/RTL_UploadStatus__c.field-meta.xml
<CustomField>
    <fullName>RTL_UploadStatus__c</fullName>
    <label>RTL UploadStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starting</fullName>
            </value>
            <value>
                <fullName>In Progress - Split File</fullName>
            </value>
            <value>
                <fullName>In Progress - Import Batch</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>In Progress - Import Member to Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>